# api/openapi-spec/v3/apis__events.k8s.io__v1_openapi.json
@@ -316,6 +316,15 @@
               "type": "string",
               "uniqueItems": true
             }
+          },
+          {
+            "name": "fieldValidation",
+            "in": "query",
+            "description": "fieldValidation determines how the server should respond to unknown/duplicate fields in the object in the request. Introduced as alpha in 1.23, older servers will ignore this param and not perform any server side field validation. Valid values are: - Ignore: ignores unknown/duplicate fields. - Warn: responds with a warning for each. unknown/duplicate field, but successfully serves the request - Strict fails the request on unknown/duplicate fields.",
+            "schema": {
+              "type": "string",
+              "uniqueItems": true
+            }
           }
         ],
         "requestBody": {
@@ -605,6 +614,15 @@
               "type": "string",
               "uniqueItems": true
             }
+          },
+          {
+            "name": "fieldValidation",
+            "in": "query",
+            "description": "fieldValidation determines how the server should respond to unknown/duplicate fields in the object in the request. Introduced as alpha in 1.23, older servers will ignore this param and not perform any server side field validation. Valid values are: - Ignore: ignores unknown/duplicate fields. - Warn: responds with a warning for each. unknown/duplicate field, but successfully serves the request - Strict fails the request on unknown/duplicate fields.",
+            "schema": {
+              "type": "string",
+              "uniqueItems": true
+            }
           }
         ],
         "requestBody": {
@@ -784,6 +802,15 @@
             "name": "fieldManager",
             "in": "query",
             "description": "fieldManager is a name associated with the actor or entity that is making these changes. The value must be less than or 128 characters long, and only contain printable characters, as defined by https://golang.org/pkg/unicode/#IsPrint. This field is required for apply requests (application/apply-patch) but optional for non-apply patch types (JsonPatch, MergePatch, StrategicMergePatch).",
+            "schema": {
+              "type": "string",
+              "uniqueItems": true
+            }
+          },
+          {
+            "name": "fieldValidation",
+            "in": "query",
+            "description": "fieldValidation determines how the server should respond to unknown/duplicate fields in the object in the request. Introduced as alpha in 1.23, older servers will ignore this param and not perform any server side field validation. Valid values are: - Ignore: ignores unknown/duplicate fields. - Warn: responds with a warning for each. unknown/duplicate field, but successfully serves the request - Strict fails the request on unknown/duplicate fields.",
             "schema": {
               "type": "string",
               "uniqueItems": true
