# staging/src/k8s.io/apiextensions-apiserver/pkg/controller/openapi/builder/builder.go
@@ -347,9 +347,9 @@ func (b *builder) buildRoute(root, path, httpMethod, actionVerb, operationVerb s
 		route.Consumes(runtime.ContentTypeJSON, runtime.ContentTypeYAML)
 	}
 
-	var disabledParams string
+	var disabledParams []string
 	if !utilfeature.DefaultFeatureGate.Enabled(features.StrictFieldValidation) {
-		disabledParams = "fieldValidation"
+		disabledParams = []string{"fieldValidation"}
 	}
 	// Build option parameters
 	switch actionVerb {
@@ -360,9 +360,9 @@ func (b *builder) buildRoute(root, path, httpMethod, actionVerb, operationVerb s
 		endpoints.AddObjectParams(b.ws, route, &metav1.ListOptions{})
 	case "put", "patch":
 		// TODO: PatchOption added in feature branch but not in master yet
-		endpoints.AddObjectParams(b.ws, route, &metav1.UpdateOptions{}, disabledParams)
+		endpoints.AddObjectParams(b.ws, route, &metav1.UpdateOptions{}, disabledParams...)
 	case "post":
-		endpoints.AddObjectParams(b.ws, route, &metav1.CreateOptions{}, disabledParams)
+		endpoints.AddObjectParams(b.ws, route, &metav1.CreateOptions{}, disabledParams...)
 	case "delete":
 		endpoints.AddObjectParams(b.ws, route, &metav1.DeleteOptions{})
 		route.Reads(&metav1.DeleteOptions{}).ParameterNamed("body").Required(false)
